--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 /.idea
+/agent_graph/__pycache__
+/agents/__pycache__
+/app/__pycache__
+/models/__pycache__
+/prompts/__pycache__
+/states/__pycache__
+/tools/__pycache__
+/utils/__pycache__
